(lang dune 3.19)

(name parsing_logic)

(generate_opam_files true)

(source
 (github BuzzYbis/parsing-logic))

(authors "BuzzY_")

(maintainers "BuzzY_")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name parsing_logic)
 (synopsis "Parse logic proposition and give its truth table.")
 (description "Parse logic proposition and give its truth table.")
 (depends ocaml)
 (tags
  ("logic" "parsing" "first-order" "truth-table")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
